# Zapani

./: .gitignore  Cargo.toml  README.md  sources.json
schedule/: schedule.html  script.js  styles.css
src/: main.rs
src/ffmpeg/: command.rs  hardware.rs  mod.rs
src/playlist/: customrandom.rs  duration_manager.rs  file_scanner.rs  filename.rs  generator.rs  metadata.rs  mod.rs  video_entry.rs
src/stream/: events.rs  mod.rs  url.rs
