[package]
name = "zapani"
version = "0.1.0"
edition = "2021"

[dependencies]
duct = "0.13.7"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.216", features = ["derive"] }
walkdir = "2.5.0"
serde_json = "1.0.133"
chrono = { version = "0.4.39", features = ["serde"] }
